fix: Navbar & Image alignment
- Navbar mobile looks good
- Alignments all cleaned up

--- a/src/Components/Home/Hero/Hero.css
+++ b/src/Components/Home/Hero/Hero.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 60px 40px 60px 60px; /* top, right, bottom, left */
+    padding: 350px 40px 60px 60px; /* top, right, bottom, left */
   }
   
   @media (max-width: 768px) {
@@ -42,6 +42,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    margin-top: -110px;
   }
   
   @media (min-width: 768px) {
